[project]
name = "microredis"
version = "1.0.0"
description = "A Redis-compatible server that fits in 300KB of RAM"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
    {name = "Mateusz Sury", email = "mateuszsury@users.noreply.github.com"},
]
keywords = ["redis", "micropython", "esp32", "embedded", "iot", "key-value"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Database",
    "Topic :: Software Development :: Embedded Systems",
]

[project.urls]
Homepage = "https://github.com/mateuszsury/microredis"
Repository = "https://github.com/mateuszsury/microredis"
Issues = "https://github.com/mateuszsury/microredis/issues"
Changelog = "https://github.com/mateuszsury/microredis/blob/main/CHANGELOG.md"
